--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -13,8 +13,18 @@
 <body>
   <h2>Descendant Node Counts</h2>
   <div class="controls">
-    <button type="button" id="copyTableMarkdown" title="Copy table as Markdown to clipboard">Copy Table as Markdown</button>
-    <button type="button" id="exportMarkdown" title="Export full report as Markdown file">Export to Markdown</button>
+    <button type="button" id="recalculateCounts" title="Recalculate descendant counts">
+      <i class="fas fa-sync-alt" aria-hidden="true"></i>
+      <span class="visually-hidden">Recalculate</span>
+    </button>
+    <button type="button" id="copyTableMarkdown" title="Copy table as Markdown to clipboard">
+      <i class="fas fa-clipboard" aria-hidden="true"></i>
+      <span class="visually-hidden">Copy Table as Markdown</span>
+    </button>
+    <button type="button" id="exportMarkdown" title="Export full report as Markdown file">
+      <i class="fas fa-file-export" aria-hidden="true"></i>
+      <span class="visually-hidden">Export to Markdown</span>
+    </button>
     <button type="button" id="testCopyModal" title="Test the copy modal fallback" style="background: #ff6600;">Test Modal</button>
   </div>
   <h4 id="nodeTitle"></h4>
