feat: Use Fontawesome icons as sort indicators

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -31,9 +31,9 @@
   <table id="countsTable">
     <thead>
       <tr>
-        <th role="columnheader" aria-sort="none" title="Click to sort by node type">Node Type/Tag<span class="sort-indicator"></span></th>
-        <th id="countHeader" role="columnheader" aria-sort="none" title="Click to sort by count">Count <span id="countTotal"></span><span class="sort-indicator"></span></th>
-        <th id="visibleCountHeader" role="columnheader" aria-sort="none" title="Click to sort by visible count">Visible <span id="visibleTotal"></span><span class="sort-indicator"></span></th>
+        <th role="columnheader" aria-sort="none" title="Click to sort by node type">Node Type/Tag<span class="sort-indicator"><i class="fas fa-sort" aria-hidden="true"></i></span></th>
+        <th id="countHeader" role="columnheader" aria-sort="none" title="Click to sort by count">Count <span id="countTotal"></span><span class="sort-indicator"><i class="fas fa-sort" aria-hidden="true"></i></span></th>
+        <th id="visibleCountHeader" role="columnheader" aria-sort="none" title="Click to sort by visible count">Visible <span id="visibleTotal"></span><span class="sort-indicator"><i class="fas fa-sort" aria-hidden="true"></i></span></th>
       </tr>
     </thead>
     <tbody></tbody>
