chore: Standardize button classes
- Fixes inconsistent button behavior.

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -13,19 +13,19 @@
 <body>
   <h2>Descendant Node Counts</h2>
   <div class="controls">
-    <button type="button" id="recalculateCounts" title="Recalculate descendant counts">
+    <button type="button" id="recalculateCounts" class="btn-cyan" title="Recalculate descendant counts">
       <i class="fas fa-sync-alt" aria-hidden="true"></i>
       <span class="visually-hidden">Recalculate</span>
     </button>
-    <button type="button" id="copyTableMarkdown" title="Copy table as Markdown to clipboard">
+    <button type="button" id="copyTableMarkdown" class="btn-green" title="Copy table as Markdown to clipboard">
       <i class="fas fa-clipboard" aria-hidden="true"></i>
       <span class="visually-hidden">Copy Table as Markdown</span>
     </button>
-    <button type="button" id="exportMarkdown" title="Export full report as Markdown file">
+    <button type="button" id="exportMarkdown" class="btn-blue" title="Export full report as Markdown file">
       <i class="fas fa-file-export" aria-hidden="true"></i>
       <span class="visually-hidden">Export to Markdown</span>
     </button>
-    <button type="button" id="testCopyModal" title="Test the copy modal fallback" style="background: #ff6600;">Test Modal</button>
+    <button type="button" id="testCopyModal" class="btn-orange" title="Test the copy modal fallback">Test Modal</button>
   </div>
   <h4 id="nodeTitle"></h4>
   <table id="countsTable">
