fix: Correct copy button animation on successful copy

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -18,8 +18,11 @@
       <span class="visually-hidden">Recalculate</span>
     </button>
     <button type="button" id="copyTableMarkdown" class="btn-green" title="Copy table as Markdown to clipboard">
-      <i class="fas fa-clipboard" aria-hidden="true"></i>
-      <span class="visually-hidden">Copy Table as Markdown</span>
+      <span class="button-content">
+        <i class="fas fa-clipboard" aria-hidden="true"></i>
+        <span class="visually-hidden">Copy Table as Markdown</span>
+      </span>
+      <span class="success-message" style="display: none;">Copied!</span>
     </button>
     <button type="button" id="exportMarkdown" class="btn-blue" title="Export full report as Markdown file">
       <i class="fas fa-file-export" aria-hidden="true"></i>
