feat: Add help modal that explains the concept of "visible"

--- a/src/assets/copy-modal.html
+++ b/src/assets/copy-modal.html
@@ -1,185 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <style>
-        /* Dark theme styles (default) */
-        .modal-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.8);
-            z-index: 1000;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        .modal-content {
-            background: #333333;
-            color: #eeeeee;
-            padding: 20px;
-            border-radius: 8px;
-            max-width: 90%;
-            max-height: 80%;
-            overflow: auto;
-            position: relative;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-        }
-
-        .modal-title {
-            margin-top: 0;
-            margin-bottom: 15px;
-            color: #00bfff;
-            font-size: 1.2em;
-        }
-
-        .modal-instructions {
-            margin-bottom: 15px;
-            color: #cccccc;
-        }
-
-        .modal-textarea {
-            width: 100%;
-            height: 200px;
-            background: #222222;
-            color: #eeeeee;
-            border: 1px solid #555555;
-            padding: 10px;
-            font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
-            font-size: 12px;
-            resize: vertical;
-            box-sizing: border-box;
-            border-radius: 4px;
-            line-height: 1.4;
-        }
-
-        .modal-textarea:focus {
-            outline: none;
-            border-color: #00bfff;
-            box-shadow: 0 0 0 2px rgba(0, 191, 255, 0.2);
-        }
-
-        .modal-buttons {
-            display: flex;
-            gap: 10px;
-            margin-top: 15px;
-            justify-content: flex-end;
-        }
-
-        .modal-btn {
-            border: none;
-            padding: 8px 16px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-weight: 500;
-            transition: background-color 0.2s;
-        }
-
-        .modal-close-btn {
-            background: #00bfff;
-            color: #222222;
-        }
-
-        .modal-close-btn:hover {
-            background: #0099cc;
-        }
-
-        .modal-close-btn:active {
-            background: #0077aa;
-        }
-
-        .modal-select-btn {
-            background: #666666;
-            color: #eeeeee;
-        }
-
-        .modal-select-btn:hover {
-            background: #777777;
-        }
-
-        .modal-select-btn:active {
-            background: #555555;
-        }
-
-        /* Light theme styles */
-        @media (prefers-color-scheme: light) {
-            .modal-overlay {
-                background: rgba(255, 255, 255, 0.9);
-            }
-
-            .modal-content {
-                background: #ffffff;
-                color: #333333;
-                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-            }
-
-            .modal-title {
-                color: #0078d4;
-            }
-
-            .modal-instructions {
-                color: #666666;
-            }
-
-            .modal-textarea {
-                background: #f8f8f8;
-                color: #333333;
-                border: 1px solid #d1d1d1;
-            }
-
-            .modal-textarea:focus {
-                border-color: #0078d4;
-                box-shadow: 0 0 0 2px rgba(0, 120, 212, 0.2);
-            }
-
-            .modal-close-btn {
-                background: #0078d4;
-                color: #ffffff;
-            }
-
-            .modal-close-btn:hover {
-                background: #106ebe;
-            }
-
-            .modal-close-btn:active {
-                background: #005a9e;
-            }
-
-            .modal-select-btn {
-                background: #e6e6e6;
-                color: #333333;
-            }
-
-            .modal-select-btn:hover {
-                background: #d9d9d9;
-            }
-
-            .modal-select-btn:active {
-                background: #cccccc;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-title">
-        <div class="modal-content">
-            <h3 class="modal-title" id="modal-title">Copy Markdown Table</h3>
-            <p class="modal-instructions">Select all text below and copy manually (Ctrl+C or Cmd+C):</p>
-            <textarea 
-                class="modal-textarea" 
-                readonly 
-                aria-label="Markdown table content"
-                spellcheck="false"
-            ></textarea>
-            <div class="modal-buttons">
-                <button type="button" class="modal-btn modal-select-btn">Select All</button>
-                <button type="button" class="modal-btn modal-close-btn">Close</button>
-            </div>
+<div class="modal-overlay" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+    <div class="modal">
+        <h2 id="modal-title">Copy Markdown Table</h2>
+        <p>Select all text below and copy manually (Ctrl+C or Cmd+C):</p>
+        <textarea 
+            class="modal-textarea" 
+            readonly 
+            aria-label="Markdown table content"
+            spellcheck="false"
+            style="width: 100%; height: 200px; font-family: 'Consolas', 'Monaco', 'Courier New', monospace; font-size: 12px; resize: vertical; box-sizing: border-box; border-radius: 4px; line-height: 1.4; padding: 10px;"
+        ></textarea>
+        <div class="modal-buttons">
+            <button type="button" class="modal-select-btn">Select All</button>
+            <button type="button" class="modal-close-btn">Close</button>
         </div>
     </div>
-</body>
-</html>
+</div>
