--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -11,7 +11,6 @@
   <link rel="stylesheet" href="./public/style-light.css" media="(prefers-color-scheme: light)">
 </head>
 <body>
-  <h2>Descendant Node Counts</h2>
   <div class="controls">
     <button type="button" id="recalculateCounts" class="btn-cyan" title="Recalculate descendant counts">
       <i class="fas fa-sync-alt" aria-hidden="true"></i>
@@ -28,7 +27,13 @@
       <i class="fas fa-file-export" aria-hidden="true"></i>
       <span class="visually-hidden">Export to Markdown</span>
     </button>
-    <button type="button" id="testCopyModal" class="btn-orange" title="Test the copy modal fallback">Test Modal</button>
+    <button type="button" id="testCopyModal" class="btn-orange" title="Test the copy modal fallback">
+      Test Modal
+    </button>
+    <button type="button" id="helpVisible" class="btn-pink ms-auto" title="What is the definition of visible?">
+      <i class="fas fa-question-circle" aria-hidden="true"></i>
+      <span class="visually-hidden">What is the definition of visible?</span>
+    </button>
   </div>
   <h4 id="nodeTitle"></h4>
   <table id="countsTable">
