--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -12,6 +12,7 @@
 </head>
 <body>
   <div class="controls">
+    <img id="logoImg" alt="DOM Descendant Counter" class="logo" title="DOM Descendant Counter">
     <button type="button" id="recalculateCounts" class="btn-cyan" title="Recalculate descendant counts">
       <i class="fas fa-sync-alt" aria-hidden="true"></i>
       <span class="visually-hidden">Recalculate</span>
