feat: Add GitHub link to repository

--- a/src/sidebar.html
+++ b/src/sidebar.html
@@ -31,7 +31,17 @@
     <button type="button" id="testCopyModal" class="btn-orange" title="Test the copy modal fallback">
       Test Modal
     </button>
-    <button type="button" id="helpVisible" class="btn-pink ms-auto" title="What is the definition of visible?">
+    <a
+      href="https://github.com/webJose/DomDescendantCounter"
+      rel="noopener noreferrer"
+      target="_blank"
+      class="ms-auto"
+      title="Issue? Feature request? Want to give us a star?"
+    >
+      <i class="fab fa-github" aria-hidden="true"></i>
+      <span class="visually-hidden">GitHub</span>
+    </a>
+    <button type="button" id="helpVisible" class="btn-pink" title="What is the definition of visible?">
       <i class="fas fa-question-circle" aria-hidden="true"></i>
       <span class="visually-hidden">What is the definition of visible?</span>
     </button>
